--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,8 +4,18 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="mb-3">
+    <%= f.label :name, class: 'form-label' %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", class: 'form-control' %>
+  </div>
+
+  <div class="mb-3">
     <%= f.label :email, class: 'form-label' %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+  </div>
+
+  <div class="mb-3">
+    <%= f.label :birthdate, class: 'form-label' %>
+    <%= f.date_field :birthdate, class: 'form-control', value: resource.birthdate %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
