--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,9 +2,22 @@
   <div class="col-md-6">
     <h2 class="text-center">Sign Up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f| %>
+      <% if resource.errors.any? %>
+        <div class="alert alert-danger">
+          <ul>
+            <% resource.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
       <div class="form-group">
         <%= f.label :name, class: 'form-label' %>
         <%= f.text_field :name, autofocus: true, class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= f.label :birthdate, class: 'form-label' %>
+        <%= f.date_field :birthdate, class: 'form-control' %>
       </div>
       <div class="form-group">
         <%= f.label :email, class: 'form-label' %>
